--- a/CV.html
+++ b/CV.html
@@ -51,8 +51,23 @@
     <div class="container">
 
       <div class="wrapper">
-        <h1>Laipni lūdzu manā mājaslappā</h1>
-        <p class="lead">Šajā lappusē Jūs varat atrast manu anketu<br> un CV.</p>
+      <h1>Arturs Dmitriconoks</h1>
+        <article>
+        <h1>VAKANCE</h1>
+        <p>programmetājs</p>
+      </article>
+        <article>
+        <h1>DARBA PIEREDZE</h1>
+        <p>C++, html5, MySql, u.t.t. </p>
+      </article>
+        <article>
+        <h1>DZIMTĀ VALODA</h1>
+        <p>krievu/latviešu</p>
+      </article>
+      <article>
+        <h1>Komunikācijas prasmes </h1>
+        <p>labas saskarsmes prasmes, kas iegūtas, strādājot par servisa inženieri spēja prezentēt savas idejas un priekšlikumus </p>
+      </article>
       </div>
 
     </div><!-- /.container -->
