--- a/forma.html
+++ b/forma.html
@@ -50,23 +50,50 @@
     </nav>
 
     <div class="container">
-
+        <div class="cbord">
           <form id="form" method="get" action="">
+          <p>
             <input type="text" name="name" minlength="2" placeholder="Vards Uzvards" type="text">
+          </p>
+          <p>
             <input type="tel" name="phone"  placeholder="Telefons" type="number">
+          </p>
+          <p>
             <input type="email" name="email"  placeholder="E-pasts" type="email">
+          </p>
+          <p>
             <input type="text" name="adress"  placeholder="Adrese" type="text">
-            <select name="grupa" placeholder="Grupa">
-              <option value="EDP1">EDP1</option>
-              <option value="EDT1">EDT1</option>
+          </p>
+          <p>
+            <select name="model" placeholder="Model">
+              <option value="E30">E30</option>
+              <option value="E36">E36</option>
+              <option value="E34">E30</option>
+              <option value="E39">E36</option>
+              <option value="E32">E32</option>
+              <option value="E38">E38</option>
             </select>
-            <input type="checkbox" class="checkbox" id="check" name="check">
+          </p>
+  <!--         <p>
+            check/uncheck <input type="checkbox" class="checkbox" id="check" name="check">
+          </p>
+           <p>
+            <input type="radio" class="radio" id="radio" name="radio" value="3 serija">
+            <input type="radio" class="radio" id="radio" name="radio" value="5 serija">
+            <input type="radio" class="radio" id="radio" name="radio" value="7 serija">
+          </p> -->
+          <p>
             <input type="comment" name="comment" placeholder="Komentars" type="text">
+          </p>
+          <p>
             <div class="g-recaptcha"  data-sitekey="6Lfo2xITAAAAAKI-h1Dbdmahrt9an0WMlBRiaCE0"></div>
+          </p>
+          <p>
             <input class="submit" type="submit" value ="sutit">
+          </p>
           </form>
-
-
+        </div>
+      
     </div><!-- /.container -->
 
     <footer class="footer">
