--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="dist/js/bootstrap.min.js"></script>
-      <script src="dist/jquery.validate.js"></script>
+      <script src="dist/js/jquery.validate.js"></script>
   </body>
 
 </html>
