--- a/errors/503.html
+++ b/errors/503.html
@@ -12,10 +12,10 @@
     <title>Arturs Dmitričonoks</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="style.css" rel="stylesheet">
+    <link href="../dist/css/style.css" rel="stylesheet" type="text/css">
 
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -36,13 +36,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">Home</a>
+          <a class="navbar-brand" href="index.php">Home</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="CV.html">CV</a></li>
-            <li><a href="forma.html">Forma</a></li>
-            <li><a href="gallery.html">Galerija</a></li>
+            <li><a href="CV.php">CV</a></li>
+            <li><a href="forma.php">Forma</a></li>
+            <li><a href="gallery.php">Galerija</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -51,23 +51,7 @@
     <div class="container">
 
       <div class="wrapper">
-      <h1>Arturs Dmitriconoks</h1>
-        <article>
-        <h1>VAKANCE</h1>
-        <p>programmetājs</p>
-      </article>
-        <article>
-        <h1>DARBA PIEREDZE</h1>
-        <p>C++, html5, MySql, u.t.t. </p>
-      </article>
-        <article>
-        <h1>DZIMTĀ VALODA</h1>
-        <p>krievu/latviešu</p>
-      </article>
-      <article>
-        <h1>Komunikācijas prasmes </h1>
-        <p>labas saskarsmes prasmes, kas iegūtas, strādājot par servisa inženieri spēja prezentēt savas idejas un priekšlikumus </p>
-      </article>
+        <h3>#503 Service Unavailable </h3>
       </div>
 
     </div><!-- /.container -->
@@ -108,6 +92,7 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="dist/js/bootstrap.min.js"></script>
+      <script src="dist/js/jquery.validate.js"></script>
   </body>
 
 </html>
