--- a/errors/504.html
+++ b/errors/504.html
@@ -12,10 +12,10 @@
     <title>Arturs Dmitričonoks</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="dist/css/style.css" rel="stylesheet" type="text/css">
+    <link href="../dist/css/style.css" rel="stylesheet" type="text/css">
 
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -51,8 +51,7 @@
     <div class="container">
 
       <div class="wrapper">
-        <h1>Laipni lūdzu manā mājaslappā</h1>
-        <p class="lead">Šajā lappusē Jūs varat atrast manu anketu<br> un CV.</p>
+        <h3>#504 Gateway Timeout</h3>
       </div>
 
     </div><!-- /.container -->
